@@ -61,6 +61,7 @@ public:
 	inline void		SetHidden(BOOL bHidden) {m_bIsHidden = bHidden;}
 	inline BOOL		IsModified() const  {return m_bModified;}
 	void			SetModified(BOOL bModified = TRUE) {m_bModified = bModified;}
+	BOOL			HasSelection() {return (!((m_nSelBlockEnd < 0)||(m_nSelBlockStart < 0)||(m_nSelBlockStart > m_nSelBlockEnd)));}
 
 	CStdCStringArray* m_arDiffLines;		///< Array of Strings containing all lines of the text file
 	CStdDWORDArray*	m_arLineStates;		///< Array of Strings containing a diff state for each text line
