@@ -29,6 +29,8 @@
        commands for that. (Stefan)
 - NEW: The log dialog can now hide/grey changed paths which aren't part
        of the item for which the log is shown. See issue #68. (Stefan)
+- NEW: New menu "Edit" in TortoiseMerge with the entries "Copy" and
+       "Find" (Ctrl-C and Ctrl-F still work). (Stefan)
 - CHG: The ESC key closes the progress dialog. See Issue #96. (Stefan)
 - CHG: Reintroduce the doubleclick action in the log dialog. (Stefan)
 - CHG: Merge dialog: if the 'use from url' is activated, the 'show log'
